--- a/index.htm
+++ b/index.htm
@@ -68,11 +68,11 @@ Beginning of the main, clickable content.
                         <option value="Powell High School">Powell High School</option>
                         <option value="West Valley Middle School">West Valley Middle School</option>
                 </select><br>
-                This roof is<br><span id="roofSize" style="font-size:150px; font-weight:bold;">x<sup>2</sup></span><br> meters in area.<br><!-- This is where we need to list the size of the roof top in meters, Ben -->
+                This roof is<br><span id="roofSize" style="font-size:150px; font-weight:bold;">6200<sup>2</sup></span><br> meters in area.<br><!-- This is where we need to list the size of the roof top in meters, Ben -->
                 </div> <!-- end of left main -->
         
                 <div id="googlemap" class="rightmain">
-                <img src="https://maps.googleapis.com/maps/api/staticmap?center=401+henley+street,knoxville,tn=10&size=450x350" height="350" width="450" alt="This is the Google Map for the selected School.">
+                <img src="http://maps.googleapis.com/maps/api/staticmap?center=5101+Schaad+Rd,+Tennessee+37931&zoom=17&scale=false&size=450x350&maptype=satellite&sensor=false&format=png&visual_refresh=true" height="350" width="450" alt="This is the Google Map for the selected School.">
                 </div> <!-- end of right main -->
                 
                 <div class="buttons"><a class="red left" href="help.htm">Help</a><a class="red right" href="step2.htm">Continue</a></div>
