--- a/step3.htm
+++ b/step3.htm
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="style.css">
         <script language="javascript" type="text/javascript" src="scripts/scroll.js"></script>
         <script language="javascript" type="text/javascript" src="scripts/jquery-2.1.1.min.js"></script>
+        <script language="javascript" type="text/javascript" src="scripts/main.js"></script>
 </head>
 
 <!--
