--- a/step2.htm
+++ b/step2.htm
@@ -52,6 +52,9 @@ Beginning of the main, clickable content.
                         setCookie("height", document.getElementById("height").value, 5);
                         setCookie("budget", document.getElementById("budget").value, 5);
                         setCookie("install", document.getElementById("install").value, 5);
+                        setCookie("payoff", document.getElementById("payoff").value, 5);
+                        setCookie("efficiency", document.getElementById("efficiency").value, 5);
+                        setCookie("panelpower", document.getElementById("panelpower").value, 5);
                         // Kbai (next step)
                         window.location.href = "/step3.htm";
                 }
