Oops href error

--- a/step2.htm
+++ b/step2.htm
@@ -56,7 +56,7 @@ Beginning of the main, clickable content.
                         setCookie("efficiency", document.getElementById("efficiency").value, 5);
                         setCookie("panelpower", document.getElementById("panelpower").value, 5);
                         // Kbai (next step)
-                        window.location.href = "/step3.htm";
+                        window.location.href = "step3.htm";
                 }
                 </script>
                 
