--- a/help.htm
+++ b/help.htm
@@ -1,15 +1,15 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>CodeTN Project - Step 1</title>
-	<link rel="stylesheet" href="style.css">
-	<script language="javascript" type="text/javascript" src="scripts/scroll.js"></script>
-	<script language="javascript" type="text/javascript" src="scripts/jquery-2.1.1.min.js"></script>
-	<script>
-		function goBack() {
-		window.history.back()
-		}
-	</script>
+        <title>CodeTN Project - Step 1</title>
+        <link rel="stylesheet" href="style.css">
+        <script language="javascript" type="text/javascript" src="scripts/scroll.js"></script>
+        <script language="javascript" type="text/javascript" src="scripts/jquery-2.1.1.min.js"></script>
+        <script>
+                function goBack() {
+                window.history.back()
+                }
+        </script>
 </head>
 
 <!--
@@ -17,10 +17,10 @@ Beginning of the navigation bar code.
 -->
 <body>
 <div id="navbar">
-	<div class="wrapper">
-	<img src="pictures/lnstem.png" class="left" alt="Team LNSTEM.">
-	<img src="pictures/solarcalculator.png" class="right" alt="Solar Calculator made by team LNSTEM.">
-	</div><!-- End wrapper -->
+        <div class="wrapper">
+        <img src="pictures/lnstem.png" class="left" alt="Team LNSTEM.">
+        <img src="pictures/solarcalculator.png" class="right" alt="Solar Calculator made by team LNSTEM.">
+        </div><!-- End wrapper -->
 </div><!-- End navbar -->
 <!--
 End of the navigation bar code.
@@ -30,9 +30,9 @@ End of the navigation bar code.
 Beginning of the step status bar code.
 -->
 <div class="steps">
-	<div class="wrapper">
-	<img src="pictures/Help.png" class="check" alt="Step 1" height="167" height="100" style="text-align:center">
-	</div><!-- End wrapper -->
+        <div class="wrapper">
+        <img src="pictures/help.png" class="check" alt="Step 1" height="167" height="100" style="text-align:center">
+        </div><!-- End wrapper -->
 </div><!-- End steps -->
 <!--
 End of the step status bar code.
@@ -42,13 +42,13 @@ End of the step status bar code.
 Beginning of the main, clickable content.
 -->
 <div class="main">
-	<div class="wrapper">
-		
-		<div class="information">Need help? Scroll down below to get any help you need!</div>
-		<span class="help">How do I use this calculator?</span><br>
-		If you click blah blah blah...
-		<div class="buttons"><a class="red left" onclick="goBack()">Back</a></div>
-	</div> <!-- end of wrapper class -->
+        <div class="wrapper">
+                
+                <div class="information">Need help? Scroll down below to get any help you need!</div>
+                <span class="help">How do I use this calculator?</span><br>
+                If you click blah blah blah...
+                <div class="buttons"><a class="red left" onclick="goBack()">Back</a></div>
+        </div> <!-- end of wrapper class -->
 </div> <!-- end of main -->
 <!--
 End of the main, clickable content.
@@ -56,9 +56,9 @@ End of the main, clickable content.
 
 
 <footer>
-	<div class="wrapper">
-	Copyright &copy; 2014 L&N STEM Academy. All rights reserved.
-	</div><!-- end of wrapper -->
+        <div class="wrapper">
+        Copyright &copy; 2014 L&N STEM Academy. All rights reserved.
+        </div><!-- end of wrapper -->
 </footer><!-- end of footer -->
 
 </body>
