Grammar fix for Alec
I think that is better!

--- a/index.htm
+++ b/index.htm
@@ -68,7 +68,7 @@ Beginning of the main, clickable content.
                         <option value="Powell High School">Powell High School</option>
                         <option value="West Valley Middle School">West Valley Middle School</option>
                 </select><br>
-                This roof is<br><span id="roofSize" style="font-size:150px; font-weight:bold;">6200<sup>2</sup></span><br> meters in area.<br><!-- This is where we need to list the size of the roof top in meters, Ben -->
+                This roof is<br><span id="roofSize" style="font-size:150px; font-weight:bold;">6200</span><br> meters squared in area.<br><!-- This is where we need to list the size of the roof top in meters, Ben -->
                 </div> <!-- end of left main -->
         
                 <div id="googlemap" class="rightmain">
