calc.js include

--- a/step3.htm
+++ b/step3.htm
@@ -6,6 +6,7 @@
         <script language="javascript" type="text/javascript" src="scripts/scroll.js"></script>
         <script language="javascript" type="text/javascript" src="scripts/jquery-2.1.1.min.js"></script>
         <script language="javascript" type="text/javascript" src="scripts/main.js"></script>
+        <script language="javascript" type="text/javascript" src="scripts/calc.js"></script>
 </head>
 
 <!--
