--- a/step3.htm
+++ b/step3.htm
@@ -61,7 +61,7 @@ Beginning of the main, clickable content.
                 Energy produced in one year: <b>x</b> kw/h.<br>
                 Pay-off time for initial investment: <b>y</b> months.<br>
                 Savings in ten years: $<b>z</b>.<br>
-				Total money spent: $<b>a</a>.<br>
+				Total money spent: $<b>a</b>.<br>
 				Panels needed for your roof: <b>b</b>.<br><br>
                 Thank you for using our calculator! If you would like to start over, click <a href="index.htm"><b>here</b></a>.
 
