--- a/step3.htm
+++ b/step3.htm
@@ -58,9 +58,9 @@ Beginning of the main, clickable content.
                 If yes:
                 You can now present this information to whoever needs it, and request a grant!<br><br>
                 -->
-                Energy produced in one year: <b><script type="text/javascript">document.write(paneloutputfinal);</script></b> kw/h.<br>
-                Pay-off time for initial investment: <b><script type="text/javascript">document.write(payofftime);</script></b> years.<br>
-                Savings in ten years: $<b><script type="text/javascript">document.write(moneysaved10years);</script></b>.<br>
+                Energy produced in one year: <b><script type="text/javascript">document.write(Math.round(paneloutputfinal * 100) / 100);</script></b> kw/h.<br>
+                Pay-off time for initial investment: <b><script type="text/javascript">document.write(Math.round(payofftime * 100) / 100);</script></b> years.<br>
+                Savings in ten years: $<b><script type="text/javascript">document.write(Math.round(moneysaved10years * 100) / 100);</script></b>.<br>
                                 Total money spent: $<b><script type="text/javascript">document.write(moneyspent);</script></a>.<br>
                                 Panels needed for your roof: <b><script type="text/javascript">document.write(panelsNeeded);</script></b>.<br><br>
                 Thank you for using our calculator! If you would like to start over, click <a href="index.htm"><b>here</b></a>.
