--- a/step2.htm
+++ b/step2.htm
@@ -87,7 +87,7 @@ Beginning of the main, clickable content.
                 
                 </div> <!-- end of right main -->
                 
-                <div class="buttons"><a class="grey left" href="help.htm">Help</a><a class="red left" href="index.htm">Back</a><a class="red right" onclick="Finish()">Finish</a></div>
+                <div class="buttons"><a class="grey left" href="help.htm">Help</a><a class="red left" href="index.htm">Back</a><a class="red right" href="step3.htm">Finish</a></div>
         </div> <!-- end of wrapper class -->
 </div> <!-- end of main -->
 <!--
