--- a/help.htm
+++ b/help.htm
@@ -45,8 +45,19 @@ Beginning of the main, clickable content.
         <div class="wrapper">
                 
                 <div class="information">Need help? Scroll down below to get any help you need!</div>
-                <span class="help">How do I use this calculator?</span><br>
-                If you click blah blah blah...
+                <span class="help">What if my school isn't on the list?</span><br>
+                If your school isn't on the list, we haven't added it yet.  Please continue checking back on this website
+                to see if your school has been added.<br>
+                <span class="help">How much does it cost to get solar panels installed?</span><br>
+                Solar panels installation companies can be found locally in the Knoxville area.  Please refer to the local
+                phone book or search for the companies online.<br>
+                <span class="help">How do I decide on a good payoff date?</span><br>
+                A good payoff date is normally five to ten years after the panels are installed.  However, your payoff may
+                be sooner if you have more panels or a higher efficiency system.<br>
+                <span class="help">I don't understand what any of these variables are! Can you help me?</span><br>
+                Our full user's manual is available <a href="UserManual.PDF">here</a>.
+                <span class="help">I love this! How do I expand on the code?</span><br>
+                We have a full maintainer's manual available as a PDF <a href="MaintanceManual.PDF">here</a>.
                 <div class="buttons"><a class="red left" onclick="goBack()">Back</a></div>
         </div> <!-- end of wrapper class -->
 </div> <!-- end of main -->
