--- a/help.htm
+++ b/help.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-        <title>CodeTN Project - Step 1</title>
+        <title>CodeTN Project - Help</title>
         <link rel="stylesheet" href="style.css">
         <script>
                 function goBack() {
