--- a/index.htm
+++ b/index.htm
@@ -74,7 +74,7 @@ Beginning of the main, clickable content.
                 <img src="http://maps.googleapis.com/maps/api/staticmap?center=5101+Schaad+Rd,+Tennessee+37931&zoom=17&scale=false&size=450x350&maptype=satellite&sensor=false&format=png&visual_refresh=true" height="350" width="450" alt="This is the Google Map for the selected School.">
                 </div> <!-- end of right main -->
                 
-                <div class="buttons"><a class="red left" href="help.htm">Help</a><a class="red right" href="step2.htm">Continue</a></div>
+                <div class="buttons"><a class="grey left" href="help.htm">Help</a><a class="red right" href="step2.htm">Continue</a></div>
         </div> <!-- end of wrapper class -->
 </div> <!-- end of main -->
 <!--
