--- a/step2.htm
+++ b/step2.htm
@@ -81,7 +81,7 @@ Beginning of the main, clickable content.
                 <input class="input_main" type="number" id="payoff" placeholder="12" tabindex="6" required><br>
                 Percent efficiency of the panels at peak:<br>
                 <input class="input_main" type="number" id="efficiency" placeholder="0.78" tabindex="7" required><br>
-                Power produced per panel in kw/h:<br>
+                Power produced per panel in watts:<br>
                 <input class="input_main" type="number" id="panelpower" placeholder="10" tabindex="8" required><br>
                 
                 </div> <!-- end of right main -->
