Height is not Width
lool

--- a/index.htm
+++ b/index.htm
@@ -26,9 +26,9 @@ Beginning of the step status bar code.
 -->
 <div class="steps">
         <div class="wrapper">
-        <img src="pictures/CheckmarkS1High.png" class="check" alt="Step 1" height="167" height="100">
-        <img src="pictures/CheckmarkS2.png" class="check" alt="Step 2" height="167" height="100">
-        <img src="pictures/CheckmarkS3.png" class="check" alt="Step 3" height="167" height="100">
+        <img src="pictures/CheckmarkS1High.png" class="check" alt="Step 1" width="167" height="100">
+        <img src="pictures/CheckmarkS2.png" class="check" alt="Step 2" width="167" height="100">
+        <img src="pictures/CheckmarkS3.png" class="check" alt="Step 3" width="167" height="100">
         </div><!-- End wrapper -->
 </div><!-- End steps -->
 <!--
