--- a/index.htm
+++ b/index.htm
@@ -25,9 +25,9 @@ Beginning of the step status bar code.
 -->
 <div class="steps">
         <div class="wrapper">
-        <img src="pictures/CheckmarkS1High.png" class="check" alt="Step 1" height="167" height="100">
-        <img src="pictures/CheckmarkS2.png" class="check" alt="Step 2" height="167" height="100">
-        <img src="pictures/CheckmarkS3.png" class="check" alt="Step 3" height="167" height="100">
+        <img src="pictures/CheckmarkS1High.png" class="check" alt="Step 1" >
+        <img src="pictures/CheckmarkS2.png" class="check" alt="Step 2" >
+        <img src="pictures/CheckmarkS3.png" class="check" alt="Step 3" >
         </div><!-- End wrapper -->
 </div><!-- End steps -->
 <!--
