--- a/step2.htm
+++ b/step2.htm
@@ -25,9 +25,9 @@ Beginning of the step status bar code.
 -->
 <div class="steps">
         <div class="wrapper">
-        <img src="pictures/CheckmarkS1.png" class="check" alt="Step 1" height="167" height="100">
-        <img src="pictures/CheckmarkS2High.png" class="check" alt="Step 2" height="167" height="100">
-        <img src="pictures/CheckmarkS3.png" class="check" alt="Step 3" height="167" height="100">
+        <img src="pictures/CheckmarkS1.png" class="check" alt="Step 1" width="278" height="167">
+        <img src="pictures/CheckmarkS2High.png" class="check" alt="Step 2" width="278" height="167">
+        <img src="pictures/CheckmarkS3.png" class="check" alt="Step 3" width="278" height="167">
         </div><!-- End wrapper -->
 </div><!-- End steps -->
 <!--
