--- a/step3.htm
+++ b/step3.htm
@@ -61,7 +61,7 @@ Beginning of the main, clickable content.
                 Savings in ten years: $<b><script type="text/javascript">document.write(Math.round(moneysaved10years * 100) / 100);</script></b>.<br>
                                 Total money spent: $<b><script type="text/javascript">document.write(moneyspent);</script></b>.<br>
                                 Panels needed for your roof: <b><script type="text/javascript">document.write(panelsNeeded);</script></b>.<br><br>
-                Thank you for using our calculator! If you would like to start over, click <a href="index.htm"><b>here</b></a>.
+                Thank you for using our calculator! If you would like to start over, click <a href="index.html"><b>here</b></a>.
 
                 </div> <!-- end of left main -->
         
