--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <title>CodeTN Project - Step 1</title>
         <link rel="stylesheet" href="style.css">
         <script language="javascript" type="text/javascript" src="scripts/main.js"></script>
+        <script type="text/javascript">
+        if (navigator.cookieEnabled == false) {
+                window.alert("ENABLE COOKIES STUPID!");
+        }
+        </script>
 </head>
 
 <!--
