--- a/step3.htm
+++ b/step3.htm
@@ -33,7 +33,7 @@
                 Pay-off time for initial investment: <b><script type="text/javascript">document.write(Math.round(payofftimeinyears * 100) / 100);</script></b> years.<br>
                 Savings in ten years: $<b><script type="text/javascript">document.write(Math.round(moneysaved10years * 100) / 100);</script></b>.<br>
                                 Total money spent: $<b><script type="text/javascript">document.write(moneyspent);</script></b>.<br>
-                                Panels needed for your roof: <b><script type="text/javascript">document.write(panelsNeeded);</script></b>.<br><br>
+                                Panels needed for your roof: <b><script type="text/javascript">document.write(Math.round(panelsNeeded));</script></b>.<br><br>
                 Thank you for using our calculator! If you would like to start over, click <a href="index.html"><b>here</b></a>.
                 </div> <!-- That's all the info we'll present. -->
                 <!-- Tell them in simple terms, is this a good investment? -->
