--- a/step3.htm
+++ b/step3.htm
@@ -29,7 +29,7 @@
                 <div class="information">After crunching some numbers, here is what we found:</div>
                 <div class="leftmain">          
                 <!-- Give the User all the feedback they desire. -->
-                Energy produced in one year: <b><script type="text/javascript">document.write(allpanelsoutputfinalperyear);</script></b> kw/h.<br>
+                Energy produced in one year: <b><script type="text/javascript">document.write(Math.round(allpanelsoutputfinalperyear));</script></b> kw/h.<br>
                 Pay-off time for initial investment: <b><script type="text/javascript">document.write(Math.round(payofftimeinyears * 100) / 100);</script></b> years.<br>
                 Savings in ten years: $<b><script type="text/javascript">document.write(Math.round(moneysaved10years * 100) / 100);</script></b>.<br>
                                 Total money spent: $<b><script type="text/javascript">document.write(moneyspent);</script></b>.<br>
