Updated with amp; and removed script tag.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
         <title>CodeTN Project - Step 1</title>
         <link rel="stylesheet" href="style.css">
-        <script language="javascript" type="text/javascript" src="scripts/main.js"></script>
+        <script language="javascript" type="text/javascript" src="scripts/main.js">
 </head>
 <!-- Beginning of the navigation bar code. -->
 <body>
@@ -62,7 +62,7 @@
 <!-- All done, display our footer. -->
 <footer>
         <div class="wrapper">
-        Copyright &copy; 2014 L&N STEM Academy. All rights reserved.
+        Copyright &copy; 2014 L&amp;N STEM Academy. All rights reserved.
         </div>
 </footer><!-- End of footer -->
 </body>
