--- a/step3.htm
+++ b/step3.htm
@@ -3,7 +3,7 @@
 <head>
         <title>CodeTN Project - Step 3</title>
         <link rel="stylesheet" href="style.css">
-        <script language="javascript" type="text/javascript" src="scripts/main.js"></script><script language="javascript" type="text/javascript" src="scripts/calc.js"></script>
+        <script language="javascript" type="text/javascript" src="scripts/main.js"></script><script language="javascript" type="text/javascript" src="scripts/calc.js">
 </head>
 <!-- Beginning of the navigation bar code. -->
 <body>
@@ -53,7 +53,7 @@
 <!-- All done, display our footer. -->
 <footer>
         <div class="wrapper">
-        Copyright &copy; 2014 L&N STEM Academy. All rights reserved.
+        Copyright &copy; 2014 L&amp;N STEM Academy. All rights reserved.
         </div>
 </footer><!-- End of footer -->
 </body>
