--- a/help.htm
+++ b/help.htm
@@ -66,7 +66,7 @@ End of the main, clickable content.
 
 <footer>
         <div class="wrapper">
-        Copyright &copy; 2014 L&N STEM Academy. All rights reserved.
+        Copyright &copy; 2014 L&amp;N STEM Academy. All rights reserved.
         </div><!-- end of wrapper -->
 </footer><!-- end of footer -->
 
