--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
         <title>CodeTN Project - Step 1</title>
         <link rel="stylesheet" href="style.css">
-        <script language="javascript" type="text/javascript" src="scripts/main.js">
+        <script language="javascript" type="text/javascript" src="scripts/main.js"></script>
 </head>
 <!-- Beginning of the navigation bar code. -->
 <body>
