--- a/step3.htm
+++ b/step3.htm
@@ -3,7 +3,7 @@
 <head>
         <title>CodeTN Project - Step 3</title>
         <link rel="stylesheet" href="style.css">
-        <script language="javascript" type="text/javascript" src="scripts/main.js"></script><script language="javascript" type="text/javascript" src="scripts/calc.js">
+        <script language="javascript" type="text/javascript" src="scripts/main.js"></script><script language="javascript" type="text/javascript" src="scripts/calc.js"></script>
 </head>
 <!-- Beginning of the navigation bar code. -->
 <body>
