dev manual rename

--- a/help.htm
+++ b/help.htm
@@ -53,9 +53,9 @@ Beginning of the main, clickable content.
                 A good payoff date is normally five to ten years after the panels are installed.  However, your payoff may
                 be sooner if you have more panels or a higher efficiency system.<br>
                 <br><span class="help">I don't understand what any of these variables are! Can you help me?</span><br>
-                Our full user's manual is available <a href="https://www.dropbox.com/s/n7p3cd2f5jhkc6o/UserManual.PDF?dl=1">here</a>.<br>
+                Our full user's manual is available as a PDF <a href="https://www.dropbox.com/s/n7p3cd2f5jhkc6o/UserManual.PDF?dl=1">here</a>.<br>
                 <br><span class="help">I love this! How do I expand on the code?</span><br>
-                We have a full maintainer's manual available as a PDF <a href="https://www.dropbox.com/s/d2borqj6h9vl6a2/MaintanceManual.PDF?dl=1">here</a>.
+                We have a full developer's manual available as a PDF <a href="https://www.dropbox.com/s/d2borqj6h9vl6a2/MaintanceManual.PDF?dl=1">here</a>.
                 <div class="buttons"><a class="red left" onclick="goBack()">Back</a></div>
         </div> <!-- end of wrapper class -->
 </div> <!-- end of main -->
