--- a/step2.htm
+++ b/step2.htm
@@ -53,7 +53,7 @@
                 <input class="input_main" type="number" id="roofsize" placeholder="75" tabindex="4" required><br>
                 </div> <!-- end of left main -->
                 <div class="rightmain">
-                Cost per panel in dollar:<br>
+                Cost per panel in dollars:<br>
                 <input class="input_main" type="number" id="install" placeholder="650" tabindex="5" required><br>
                 Desired payoff time in months:<br>
                 <input class="input_main" type="number" id="payoff" placeholder="72" tabindex="6" required><br>
