--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script language="javascript" type="text/javascript" src="scripts/main.js"></script>
 </head>
 <!-- Beginning of the navigation bar code. -->
-<body>
+<body onload='document.getElementById("slct").value=getCookie("school")'>
 <div id="navbar">
         <div class="wrapper">
         <img src="pictures/lnstem.png" class="left" alt="Team LNSTEM.">
